PRJ_VER=0.4.1
SUMMARY=More informative error message.
BODHI_UPDATE_TYPE=bugfix
REDHAT_BUGZILLA=671063
[Changes]
- Now has more informative error message, when cmake-fedora is not installed.
- Fixed UseUninstall
- Fixed Bug 671063 - [cmake-fedora] target "rpmlint"
  should not depend on "koji_scratch_build"