@@ -1,9 +1,14 @@
 PRJ_VER=0.4.1
-SUMMARY=More informative error message.
+SUMMARY=Fixed 670079,671063; Fixed UseUninstall;More informative error message.
 BODHI_UPDATE_TYPE=bugfix
-REDHAT_BUGZILLA=671063
+REDHAT_BUGZILLA=670079,671063
 [Changes]
 - Now has more informative error message, when cmake-fedora is not installed.
 - Fixed UseUninstall
+- Fixed Bug 670079 - [cmake-fedora] target "release"
+  will not stop when koji build failed
 - Fixed Bug 671063 - [cmake-fedora] target "rpmlint"
   should not depend on "koji_scratch_build"
+- Protocol for hosting server should now be specified as "[Hosting]_PROTOCOL".
+- Refactoring ManageMaintainerTargets.
+
